[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/BombItem/hand_grenade.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GameScene/BombItems/Grenade.gd" type="Script" id=2]
[ext_resource path="res://Sprites/BombItem/explosion.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.53803

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Explosion",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=20]
radius = 31.9558

[node name="Grenade" type="RigidBody2D"]
position = Vector2( 16.7227, 14.1098 )
gravity_scale = 0.0
linear_damp = 1.0
script = ExtResource( 2 )

[node name="GrenadeSprite" type="Sprite" parent="."]
position = Vector2( 0.523448, -0.370331 )
scale = Vector2( 0.324458, 0.295923 )
texture = ExtResource( 1 )
region_rect = Rect2( 550.24, 562.966, 171, 176 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.138928, -0.269577 )
shape = SubResource( 1 )

[node name="AOEAttack" type="Area2D" parent="."]
position = Vector2( -1.67207, 0.639153 )
z_index = -1
collision_layer = 4
collision_mask = 4

[node name="ExplosionSprite" type="AnimatedSprite" parent="AOEAttack"]
frames = SubResource( 19 )
animation = "Explosion"
speed_scale = 3.0

[node name="AOEArea" type="CollisionShape2D" parent="AOEAttack"]
position = Vector2( 1.65668, -0.302223 )
shape = SubResource( 20 )

[node name="Bomb_Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="animation_finished" from="AOEAttack/ExplosionSprite" to="." method="_on_ExplosionSprite_animation_finished"]
[connection signal="timeout" from="Bomb_Timer" to="." method="_on_Bomb_Timer_timeout"]
